tests/snapshots/examples_fixtures/type_system__failing__35_pure_context_typed_pure_rejects_io.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/35_pure_context_typed_pure_rejects_io.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `print` requires effect `IO` in this function signature.

  examples/type_system/failing/35_pure_context_typed_pure_rejects_io.flx:4:5
  |
4 |     print(x)
  |     ^^^^^
  |     ----- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.


Warning: missing CFG bytecode binding for IR call dest


Found 1 error and 1 warning.
== stdout ==
<not executed>
